# fi

./: .gitignore  README.md
app/api/: Api.dev.dockerfile  Cargo.toml
app/api/src/: main.rs
app/api/src/routes/: ping.rs
app/authorizer/: Authorizer.dev.dockerfile  Cargo.toml  README.md
app/authorizer/migration/: Cargo.toml
app/authorizer/migration/src/: lib.rs  m20250407_184459_create_user_and_passcode.rs
app/authorizer/src/: app.rs  config.rs  lib.rs  main.rs  state.rs
app/authorizer/src/db/: connection.rs  init.rs
app/authorizer/src/handlers/: join_handler.rs  mod.rs  resend_handler.rs  session_handler.rs  verify_handler.rs
app/authorizer/src/models/: join.rs  mod.rs  passcode.rs  resend.rs  session.rs  user.rs  verify.rs
app/authorizer/src/payloads/: join_user_payload.rs  mod.rs  resend_passcode_payload.rs  verify_passcode_payload.rs
app/authorizer/src/repositories/: mod.rs  passcode_repository.rs  session_repository.rs  user_repository.rs
app/authorizer/src/routes/: join.rs  metrics.rs  mod.rs  ping.rs  resend.rs  session.rs  v1.rs  verify.rs
app/authorizer/src/services/: email_client.rs  mod.rs  passcode_service.rs  session_service.rs  user_service.rs  walletor_client.rs
app/authorizer/src/utils/: mod.rs  normalize.rs  token.rs
app/authorizer/tests/: config.rs  handlers.rs  models.rs  payloads.rs  repositories.rs  services.rs  utils.rs
app/authorizer/tests/handlers/: join_handler.rs  resend_handler.rs  session_handler.rs  verify_handler.rs
app/authorizer/tests/models/: join.rs  resend.rs  verify.rs
app/authorizer/tests/payloads/: join_user_payload.rs  resend_passcode_payload.rs  verify_passcode_payload.rs
app/authorizer/tests/repositories/: passcode_repository.rs  session_repository.rs  user_repository.rs
app/authorizer/tests/services/: email_client.rs  passcode_service.rs  session_service.rs  user_service.rs  walletor_client.rs
app/authorizer/tests/utils/: normalize.rs  token.rs
app/emailer/: Cargo.toml  README.md
app/emailer/migration/src/: lib.rs  m20250411_000905_create_email.rs
app/emailer/src/: app.rs  config.rs  lib.rs  main.rs  state.rs
app/emailer/src/db/: connection.rs  init.rs  mod.rs
app/emailer/src/handlers/: mod.rs  passcode.rs  passcode_handler.rs
app/emailer/src/models/: email.rs  email_type.rs  mod.rs  passcode.rs  provider.rs
app/emailer/src/payloads/: mod.rs  passcode_payload.rs
app/emailer/src/repositories/: email_repository.rs  mod.rs
app/emailer/src/routes/: mod.rs  passcode.rs  ping.rs  v1.rs
app/emailer/src/services/: emailer.rs  emailer_service.rs  mailhog.rs  mailhog_service.rs  mod.rs
app/emailer/src/utils/: normalize.rs
app/emailer/src/validators/: mod.rs  passcode_validator.rs
app/emailer/tests/: config.rs  handlers.rs  models.rs  validators.rs
app/emailer/tests/handlers/: passcode_handler.rs
app/emailer/tests/models/: passcode.rs
app/emailer/tests/payloads/: passcode_payload.rs
app/emailer/tests/repositories/: email_repository.rs
app/emailer/tests/services/: mailhog_service.rs
app/emailer/tests/validators/: passcode_validator.rs
app/fe/: Fe.dev.dockerfile  package-lock.json  package.json
builder/dev/: Makefile  dc.authorizer.fe.yml  dc.authorizer.yml  dc.emailer.yml  dc.observability.yml  dc.solana.aggregator.yml  dc.solana.transactor.yml  dc.solana.tx.yml  dc.solana.walletor.yml  docker-compose.yml
builder/dev/prometheus/: prometheus.yml
builder/local/: docker-compose.test.yml  docker-compose.yml
builder/test/: Makefile  dc.authorizer.fe.yml  dc.authorizer.yml  dc.emailer.yml  dc.observability.yml  dc.solana.aggregator.yml  dc.solana.transactor.yml  dc.solana.walletor.yml  docker-compose.yml
builder/test/prometheus/: prometheus.yml
dapp/solana/aggregator/ts-agg/: TsAgg.test.dockerfile  package-lock.json  package.json
dapp/solana/aggregator/ts-agg/src/: app.ts  index.ts  server.ts
dapp/solana/transactor/: Cargo.toml  README.md  Transactor.dev.dockerfile
dapp/solana/transactor/migration/src/: lib.rs  m20250505_140047_create_tx.rs
dapp/solana/transactor/src/: app.rs  lib.rs  main.rs
dapp/solana/transactor/src/repositories/: mod.rs
dapp/solana/transactor/src/routes/: v1.rs
dapp/solana/transactor/tests/: config.rs
dapp/solana/transactor/tests/repositories/: tx_repository.rs
dapp/solana/transactor/tests/utils/: normalize.rs
dapp/solana/tx/: Cargo.toml  Tx.test.dockerfile  sea-orm-cli.toml
dapp/solana/tx/src/: app.rs  config.rs  state.rs
dapp/solana/tx/src/models/: tx.rs
dapp/solana/tx/src/repositories/: tx_repository.rs
dapp/solana/tx/src/routes/: mod.rs  ping.rs  v1.rs
dapp/solana/tx/src/utils/: normalize.rs
dapp/solana/tx/tests/: payloads.rs  respoistories.rs  services.rs  utils.rs
dapp/solana/tx/tests/services/: mailhog_service.rs
dapp/solana/tx/tests/utils/: normalize.rs
dapp/solana/tx/tests/validators/: email_validator.rs
dapp/solana/walletor/: Cargo.toml  README.md
dapp/solana/walletor/migration/src/: lib.rs  m20250426_205720_create_wallet_encryption_secret_wallet_share.rs
dapp/solana/walletor/src/: app.rs  config.rs  lib.rs  main.rs
dapp/solana/walletor/src/crypto/: mod.rs
dapp/solana/walletor/src/db/: connection.rs
dapp/solana/walletor/src/handlers/: ata_handler.rs  fund_handler.rs  mod.rs  sign_handler.rs  singup_handler.rs
dapp/solana/walletor/src/models/: encryption_secret.rs  mod.rs  wallet.rs  wallet_share.rs
dapp/solana/walletor/src/payloads/: ata_payload.rs  fund_payload.rs  mod.rs  sign_payload.rs  signup.rs  signup_payload.rs
dapp/solana/walletor/src/repositories/: mod.rs  (+3 more)
dapp/solana/walletor/tests/: config.rs  crypto.rs  handlers.rs  payloads.rs  repositories.rs  services.rs  utils.rs
docs/app/authorizer/: join-flow.md
docs/diagrams/: README.md  fi-v1-002-001.drawio  strp.drawio
docs/postman/: fi-de.postman_collection.json
frontend/authorizer/: package-lock.json  package.json  tsconfig.json
frontend/authorizer/app/: page.tsx
frontend/authorizer/app/components/: EmailForm.tsx  PasscodeForm.tsx
frontend/authorizer/app/join/: page.tsx
frontend/authorizer/app/verify/: page.tsx
(+38 files in other folders)
